fixed bug that types could not be edited and gave colour to colapsed menu button for visibilety

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,10 +31,14 @@ h4 {
 
 .collapsible-header {
     border-color: #2196F3;
-    border-style: ridge;
+    border-style: solid;
 }
 
 .collapsible-body {
     border-color: #2196F3;
     border-style: ridge;
+}
+
+nav .button-collapse i {
+    color: #2196F3;
 }
